--- a/other-cel/ensure-probes-different/ensure-probes-different.yaml
+++ b/other-cel/ensure-probes-different/ensure-probes-different.yaml
@@ -4,10 +4,11 @@ metadata:
   name: validate-probes
   annotations:
     pod-policies.kyverno.io/autogen-controllers: none
-    policies.kyverno.io/title: Validate Probes
-    policies.kyverno.io/category: Sample
+    policies.kyverno.io/title: Validate Probes in CEL expressions
+    policies.kyverno.io/category: Sample in CEL 
     policies.kyverno.io/severity: medium
-    policies.kyverno.io/minversion: 1.6.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Liveness and readiness probes accomplish different goals, and setting both to the same
@@ -15,7 +16,7 @@ metadata:
       checks that liveness and readiness probes are not equal. Keep in mind that if both the 
       probes are not set, they are considered to be equal and hence fails the check.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: false
   rules:
     - name: validate-probes
@@ -27,10 +28,11 @@ spec:
             - DaemonSet
             - StatefulSet
       validate:
-        message: "Liveness and readiness probes cannot be the same."
-        deny:
-          conditions:
-            any:
-            - key: "{{ request.object.spec.template.spec.containers[?readinessProbe==livenessProbe] | length(@) }}"
-              operator: GreaterThan
-              value: 0
+        cel:
+          expressions:
+            - expression: >-
+                !object.spec.template.spec.containers.exists(container, 
+                has(container.readinessProbe) && has(container.livenessProbe) &&
+                container.readinessProbe == container.livenessProbe)
+              message: "Liveness and readiness probes cannot be the same."
+
