--- a/other-cel/forbid-cpu-limits/forbid-cpu-limits.yaml
+++ b/other-cel/forbid-cpu-limits/forbid-cpu-limits.yaml
@@ -3,18 +3,18 @@ kind: ClusterPolicy
 metadata:
   name: forbid-cpu-limits
   annotations:
-    policies.kyverno.io/title: Forbid CPU Limits
-    policies.kyverno.io/category: Other
+    policies.kyverno.io/title: Forbid CPU Limits in CEL expressions
+    policies.kyverno.io/category: Other in CEL 
     policies.kyverno.io/subject: Pod
-    kyverno.io/kyverno-version: 1.10.0
-    kyverno.io/kubernetes-version: "1.26"
+    kyverno.io/kyverno-version: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Setting of CPU limits is a debatable poor practice as it can result, when defined, in potentially starving
       applications of much-needed CPU cycles even when they are available. Ensuring that CPU limits are not
       set may ensure apps run more effectively. This policy forbids any container in a Pod from defining CPU limits.
 spec:
   background: true
-  validationFailureAction: Enforce
+  validationFailureAction: Audit
   rules:
   - name: check-cpu-limits
     match:
@@ -23,11 +23,10 @@ spec:
           kinds:
           - Pod
     validate:
-      message: Containers may not define CPU limits.
-      pattern:
-        spec:
-          containers:
-          - (name): "*"
-            =(resources):
-              =(limits):
-                X(cpu): null
+      cel:
+        expressions:
+          - expression: >-
+              !object.spec.containers.exists(container, 
+              has(container.resources) && has(container.resources.limits) && has(container.resources.limits.cpu))
+            message: Containers may not define CPU limits.
+
