convert imagepullpolicy-always to cel
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/imagepullpolicy-always/.kyverno-test/resource.yaml
+++ b/other-cel/imagepullpolicy-always/.kyverno-test/resource.yaml
@@ -21,7 +21,7 @@ spec:
   containers:
   - name: nginx
     image: nginx:latest
-
+    imagePullPolicy: "IfNotPresent"
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -40,6 +40,7 @@ spec:
       containers:
       - name: nginx
         image: nginx
+        imagePullPolicy: "IfNotPresent"
         ports:
         - containerPort: 80
 
