--- a/best-practices-cel/disallow-latest-tag/.kyverno-test/kyverno-test.yaml
+++ b/best-practices-cel/disallow-latest-tag/.kyverno-test/kyverno-test.yaml
@@ -12,49 +12,37 @@ results:
   resources:
   - baddeployment01
   result: fail
-  rule: require-image-tag
+  rule: require-and-validate-image-tag
 - kind: Pod
   policy: disallow-latest-tag
   resources:
   - badpod01
   - badpod02
   result: fail
-  rule: require-image-tag
+  rule: require-and-validate-image-tag
 - kind: Deployment
   policy: disallow-latest-tag
   resources:
   - gooddeployment01
   result: pass
-  rule: require-image-tag
+  rule: require-and-validate-image-tag
 - kind: Pod
   policy: disallow-latest-tag
   resources:
   - myapp-pod
   result: pass
-  rule: require-image-tag
+  rule: require-and-validate-image-tag
 - kind: Deployment
   policy: disallow-latest-tag
   resources:
   - vit-baddeployment01
   result: fail
-  rule: validate-image-tag
+  rule: require-and-validate-image-tag
 - kind: Pod
   policy: disallow-latest-tag
   resources:
   - vit-badpod01
   - vit-badpod02
   result: fail
-  rule: validate-image-tag
-- kind: Deployment
-  policy: disallow-latest-tag
-  resources:
-  - gooddeployment01
-  result: pass
-  rule: validate-image-tag
-- kind: Pod
-  policy: disallow-latest-tag
-  resources:
-  - myapp-pod
-  result: pass
-  rule: validate-image-tag
+  rule: require-and-validate-image-tag
 
