--- a/other-cel/limit-hostpath-type-pv/limit-hostpath-type-pv.yaml
+++ b/other-cel/limit-hostpath-type-pv/limit-hostpath-type-pv.yaml
@@ -3,11 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: limit-hostpath-type-pv
   annotations:
-    policies.kyverno.io/title: Limit hostPath PersistentVolumes to Specific Directories
-    policies.kyverno.io/category: Other
+    policies.kyverno.io/title: Limit hostPath PersistentVolumes to Specific Directories in CEL expressions
+    policies.kyverno.io/category: Other in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: PersistentVolume
-    policies.kyverno.io/minversion: 1.6.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       hostPath persistentvolumes consume the underlying node's file system. If hostPath volumes
       are not to be universally disabled, they should be restricted to only certain
@@ -15,7 +16,7 @@ metadata:
       the only directory that can be mounted as a hostPath volume is /data.
 spec:
   background: false
-  validationFailureAction: audit
+  validationFailureAction: Audit
   rules:
   - name: limit-hostpath-type-pv-to-slash-data
     match:
@@ -23,16 +24,9 @@ spec:
       - resources:
           kinds:
           - PersistentVolume
-    preconditions:
-      all:
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: AnyIn
-        value:
-        - CREATE
-        - UPDATE
     validate:
-      message: hostPath type persistent volumes are confined to /data.
-      pattern:
-        spec:
-          =(hostPath):
-            path: /data*
+      cel: 
+        expressions:
+          - expression: "!has(object.spec.hostPath) || object.spec.hostPath.path.startsWith('/data')"
+            message: hostPath type persistent volumes are confined to /data.
+
