--- a/other-cel/metadata-match-regex/metadata-match-regex.yaml
+++ b/other-cel/metadata-match-regex/metadata-match-regex.yaml
@@ -3,17 +3,19 @@ kind: ClusterPolicy
 metadata:
   name: metadata-match-regex
   annotations:
-    policies.kyverno.io/title: Metadata Matches Regex
-    policies.kyverno.io/category: Other
+    policies.kyverno.io/title: Metadata Matches Regex in CEL expressions
+    policies.kyverno.io/category: Other in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod, Label
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Rather than a simple check to see if given metadata such as labels and annotations are present,
       in some cases they need to be present and the values match a specified regular expression. This
       policy illustrates how to ensure a label with key `corp.org/version` is both present and matches
       a given regex, in this case ensuring semver is met.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: false
   rules:
   - name: check-for-regex
@@ -23,11 +25,11 @@ spec:
           kinds:
           - Pod
     validate:
-      message: >-
-        The label `corp.org/version` is required and must match the specified regex: ^v[0-9].[0-9].[0-9]$
-      deny:
-        conditions:
-          all:
-          - key: "{{ regex_match('^v[0-9].[0-9].[0-9]$','{{request.object.metadata.labels.\"corp.org/version\" || 'empty'}}') }}"
-            operator: Equals
-            value: false
+      cel:
+        expressions:
+          - expression: >-
+              has(object.metadata.labels) && 'corp.org/version' in object.metadata.labels && 
+              object.metadata.labels['corp.org/version'].matches('^v[0-9].[0-9].[0-9]$')
+            message: >-
+              The label `corp.org/version` is required and must match the specified regex: ^v[0-9].[0-9].[0-9]$
+
