--- a/other-cel/prevent-bare-pods/prevent-bare-pods.yaml
+++ b/other-cel/prevent-bare-pods/prevent-bare-pods.yaml
@@ -3,13 +3,13 @@ kind: ClusterPolicy
 metadata:
   name: prevent-bare-pods
   annotations:
-    policies.kyverno.io/title: Prevent Bare Pods
+    policies.kyverno.io/title: Prevent Bare Pods in CEL expressions
     pod-policies.kyverno.io/autogen-controllers: none
-    policies.kyverno.io/category: Other, EKS Best Practices
+    policies.kyverno.io/category: Other, EKS Best Practices in CEL 
     policies.kyverno.io/severity: medium
-    kyverno.io/kyverno-version: 1.7.0
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Pods not created by workload controllers such as Deployments
@@ -17,7 +17,7 @@ metadata:
       This policy prevents such "bare" Pods from being created unless they originate
       from a higher-level workload controller of some sort.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: bare-pods
@@ -26,16 +26,8 @@ spec:
       - resources:
           kinds:
           - Pod
-    preconditions:
-      all:
-      - key: "{{request.operation || 'BACKGROUND'}}"
-        operator: NotEquals
-        value: DELETE
     validate:
-      message: "Bare Pods are not allowed. They must be created by Pod controllers."
-      deny:
-        conditions:
-          any:
-          - key: ownerReferences
-            operator: AnyNotIn
-            value: "{{request.object.metadata.keys(@)}}"
+      cel:
+        expressions:
+          - expression: "'ownerReferences' in object.metadata"
+            message: "Bare Pods are not allowed. They must be created by Pod controllers."
