--- a/other-cel/memory-requests-equal-limits/memory-requests-equal-limits.yaml
+++ b/other-cel/memory-requests-equal-limits/memory-requests-equal-limits.yaml
@@ -3,17 +3,18 @@ kind: ClusterPolicy
 metadata:
   name: memory-requests-equal-limits
   annotations:
-    policies.kyverno.io/title: Memory Requests Equal Limits
-    policies.kyverno.io/category: Sample
+    policies.kyverno.io/title: Memory Requests Equal Limits in CEL expressions
+    policies.kyverno.io/category: Sample in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
-    policies.kyverno.io/minversion: 1.6.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Pods which have memory limits equal to requests could be given a QoS class of Guaranteed if
       they also set CPU limits equal to requests. Guaranteed is the highest schedulable class. 
       This policy checks that all containers in a given Pod have memory requests equal to limits.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: false
   rules:
   - name: memory-requests-equal-limits
@@ -23,10 +24,15 @@ spec:
           kinds:
           - Pod
     validate:
-      message: "resources.requests.memory must be equal to resources.limits.memory"
-      deny:
-        conditions:
-          any:
-          - key: "{{ request.object.spec.containers[?resources.requests.memory!=resources.limits.memory] | length(@) }}"
-            operator: NotEquals
-            value: 0
+      cel:
+        variables:
+          - name: containersWithResources
+            expression: object.spec.containers.filter(container, has(container.resources))
+        expressions:
+        - expression: >-
+            variables.containersWithResources.all(container, 
+            !has(container.resources.requests) ||
+            !has(container.resources.requests.memory) ||
+            container.resources.requests.memory == container.resources.?limits.?memory.orValue('-1'))
+          message: "resources.requests.memory must be equal to resources.limits.memory"
+
