--- a/other-cel/prevent-cr8escape/prevent-cr8escape.yaml
+++ b/other-cel/prevent-cr8escape/prevent-cr8escape.yaml
@@ -3,12 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: prevent-cr8escape
   annotations:
-    policies.kyverno.io/title: Prevent cr8escape (CVE-2022-0811)
-    policies.kyverno.io/category: Other
+    policies.kyverno.io/title: Prevent cr8escape (CVE-2022-0811) in CEL expressions
+    policies.kyverno.io/category: Other in CEL 
     policies.kyverno.io/severity: high
-    kyverno.io/kyverno-version: 1.6.0
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       A vulnerability "cr8escape" (CVE-2022-0811) in CRI-O the container runtime engine
@@ -16,7 +16,7 @@ metadata:
       and gain root access to the host. The recommended remediation is to disallow
       sysctl settings with + or = in their value.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: Enforce
   background: true
   rules:
     - name: restrict-sysctls-cr8escape
@@ -26,9 +26,10 @@ spec:
             kinds:
               - Pod
       validate:
-        message: "characters '+' or '=' are not allowed in sysctls values"      
-        pattern:
-          spec:
-            =(securityContext):
-              =(sysctls):
-                - =(value): "!*+* & !*=*"
+        cel:
+          expressions:
+            - expression: >-
+                !has(object.spec.securityContext) || !has(object.spec.securityContext.sysctls) || 
+                object.spec.securityContext.sysctls.all(sysctl, !has(sysctl.value) || (!sysctl.value.contains('+') && !sysctl.value.contains('='))) 
+              message: "characters '+' or '=' are not allowed in sysctls values"      
+
