--- a/other-cel/require-annotations/require-annotations.yaml
+++ b/other-cel/require-annotations/require-annotations.yaml
@@ -3,17 +3,19 @@ kind: ClusterPolicy
 metadata:
   name: require-annotations
   annotations:
-    policies.kyverno.io/title: Require Annotations
-    policies.kyverno.io/category: Other
+    policies.kyverno.io/title: Require Annotations in CEL expressions
+    policies.kyverno.io/category: Other in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod, Annotation
+    kyverno.io/kyverno-version: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Define and use annotations that identify semantic attributes of your application or Deployment.
       A common set of annotations allows tools to work collaboratively, describing objects in a common manner that
       all tools can understand. The recommended annotations describe applications in a way that can be
       queried. This policy validates that the annotation `corp.org/department` is specified with some value.      
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: check-for-annotation
@@ -23,8 +25,10 @@ spec:
           kinds:
           - Pod
     validate:
-      message: "The annotation `corp.org/department` is required."
-      pattern:
-        metadata:
-          annotations:
-            corp.org/department: "?*"
+      cel:
+        expressions:
+          - expression: >-
+              has(object.metadata.annotations) && 
+              'corp.org/department' in object.metadata.annotations && object.metadata.annotations['corp.org/department'] != ''
+            message: "The annotation `corp.org/department` is required."
+
