--- a/other-cel/require-deployments-have-multiple-replicas/.kyverno-test/resource.yaml
+++ b/other-cel/require-deployments-have-multiple-replicas/.kyverno-test/resource.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mydeploy
+  name: mydeploygood
 spec:
   replicas: 2
   selector:
@@ -19,13 +19,22 @@ spec:
         - containerPort: 80
 
 ---
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  labels:
-    foo: bar
-  name: myapp-pod
+  name: mydeploybad
 spec:
-  containers:
-  - image: nginx
-    name: nginx
+  replicas: 1
+  selector:
+    matchLabels:
+      app: myapp
+  template:
+    metadata:
+      labels:
+        app: myapp
+    spec:
+      containers:
+      - name: nginx
+        image: nginx
+        ports:
+        - containerPort: 80
