--- a/other-cel/prevent-bare-pods/.chainsaw-test/chainsaw-test.yaml
+++ b/other-cel/prevent-bare-pods/.chainsaw-test/chainsaw-test.yaml
@@ -21,7 +21,7 @@ spec:
           spec:
             validationFailureAction: Enforce
     - assert:
-        file: chainsaw-step-01-assert-1.yaml
+        file: policy-ready.yaml
   - name: step-02
     try:
     - apply:
