--- a/other-cel/require-image-checksum/require-image-checksum.yaml
+++ b/other-cel/require-image-checksum/require-image-checksum.yaml
@@ -3,17 +3,18 @@ kind: ClusterPolicy
 metadata:
   name: require-image-checksum
   annotations:
-    policies.kyverno.io/title: Require Images Use Checksums
-    policies.kyverno.io/category: Sample
+    policies.kyverno.io/title: Require Images Use Checksums in CEL expressions
+    policies.kyverno.io/category: Sample in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
-    policies.kyverno.io/minversion: 1.6.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Use of a SHA checksum when pulling an image is often preferable because tags
       are mutable and can be overwritten. This policy checks to ensure that all images
       use SHA checksums rather than tags.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: require-image-checksum
@@ -23,8 +24,8 @@ spec:
           kinds:
           - Pod
     validate:
-      message: "Images must use checksums rather than tags."
-      pattern:
-        spec:
-          containers:
-          - image: "*@*"
+      cel:
+        expressions:
+          - expression: "object.spec.containers.all(container, container.image.contains('@'))"
+            message: "Images must use checksums rather than tags."
+
