--- a/other-cel/require-pod-priorityclassname/require-pod-priorityclassname.yaml
+++ b/other-cel/require-pod-priorityclassname/require-pod-priorityclassname.yaml
@@ -3,10 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: require-pod-priorityclassname
   annotations:
-    policies.kyverno.io/title: Require Pod priorityClassName
-    policies.kyverno.io/category: Multi-Tenancy, EKS Best Practices
+    policies.kyverno.io/title: Require Pod priorityClassName in CEL expressions
+    policies.kyverno.io/category: Multi-Tenancy, EKS Best Practices in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
+    kyverno.io/kyverno-version: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       A Pod may optionally specify a priorityClassName which indicates the scheduling
       priority relative to others. This requires creation of a PriorityClass object in advance.
@@ -15,7 +17,7 @@ metadata:
       scheduling guarantees. This policy requires that a Pod defines the priorityClassName field
       with some value.
 spec:
-  validationFailureAction: enforce
+  validationFailureAction: Audit
   background: true
   rules:
   - name: check-priorityclassname
@@ -25,7 +27,8 @@ spec:
           kinds:
           - Pod
     validate:
-      message: "Pods must define the priorityClassName field."
-      pattern:
-        spec:
-          priorityClassName: "?*"
+      cel:
+        expressions:
+          - expression: "has(object.spec.priorityClassName) &&  object.spec.priorityClassName != ''"
+            message: "Pods must define the priorityClassName field."
+
