--- a/other-cel/require-storageclass/require-storageclass.yaml
+++ b/other-cel/require-storageclass/require-storageclass.yaml
@@ -3,10 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: require-storageclass
   annotations:
-    policies.kyverno.io/title: Require StorageClass
-    policies.kyverno.io/category: Other, Multi-Tenancy
+    policies.kyverno.io/title: Require StorageClass in CEL expressions
+    policies.kyverno.io/category: Other, Multi-Tenancy in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: PersistentVolumeClaim, StatefulSet
+    kyverno.io/kyverno-version: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       PersistentVolumeClaims (PVCs) and StatefulSets may optionally define a StorageClass
       to dynamically provision storage. In a multi-tenancy environment where StorageClasses are
@@ -14,7 +16,7 @@ metadata:
       StorageClasses. This policy requires that PVCs and StatefulSets containing
       volumeClaimTemplates define the storageClassName field with some value.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: pvc-storageclass
@@ -24,10 +26,10 @@ spec:
           kinds:
           - PersistentVolumeClaim
     validate:
-      message: "PersistentVolumeClaims must define a storageClassName."
-      pattern:
-        spec:
-          storageClassName: "?*"
+      cel:
+        expressions:
+          - expression: "has(object.spec.storageClassName) && object.spec.storageClassName != ''"
+            message: "PersistentVolumeClaims must define a storageClassName."
   - name: ss-storageclass
     match:
       any:
@@ -35,9 +37,12 @@ spec:
           kinds:
           - StatefulSet
     validate:
-      message: "StatefulSets must define a storageClassName."
-      pattern:
-        spec:
-          =(volumeClaimTemplates):
-            - spec:
-                storageClassName: "?*"
+      cel:
+        expressions:
+          - expression: >-
+              !has(object.spec.volumeClaimTemplates) || 
+              object.spec.volumeClaimTemplates.all(volumeClaimTemplate, 
+              has(volumeClaimTemplate.spec.storageClassName) && volumeClaimTemplate.spec.storageClassName  != '')
+            message: "StatefulSets must define a storageClassName."
+
+  
