--- a/other-cel/restrict-binding-clusteradmin/restrict-binding-clusteradmin.yaml
+++ b/other-cel/restrict-binding-clusteradmin/restrict-binding-clusteradmin.yaml
@@ -3,20 +3,20 @@ kind: ClusterPolicy
 metadata:
   name: restrict-binding-clusteradmin
   annotations:
-    policies.kyverno.io/title: Restrict Binding to Cluster-Admin
-    policies.kyverno.io/category: Security
+    policies.kyverno.io/title: Restrict Binding to Cluster-Admin in CEL expressions
+    policies.kyverno.io/category: Security in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: RoleBinding, ClusterRoleBinding, RBAC
-    kyverno.io/kyverno-version: 1.6.2
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       The cluster-admin ClusterRole allows any action to be performed on any resource
       in the cluster and its granting should be heavily restricted. This
       policy prevents binding to the cluster-admin ClusterRole in
       RoleBinding or ClusterRoleBinding resources.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
     - name: clusteradmin-bindings
@@ -27,7 +27,8 @@ spec:
               - RoleBinding
               - ClusterRoleBinding
       validate:
-        message: "Binding to cluster-admin is not allowed."
-        pattern:
-          roleRef: 
-            name: "!cluster-admin"
+        cel:
+          expressions:
+            - expression: "object.roleRef.name != 'cluster-admin'"
+              message: "Binding to cluster-admin is not allowed."
+
