fix kind in chainsaw test resource
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/restrict-binding-system-groups/.chainsaw-test/crb-bad.yaml
+++ b/other-cel/restrict-binding-system-groups/.chainsaw-test/crb-bad.yaml
@@ -16,7 +16,7 @@ kind: ClusterRoleBinding
 metadata:
   name: badcrb02
 subjects:
-- kind: ServiceAccount
+- kind: Group
   namespace: foo
   name: "system:unauthenticated"
   apiGroup: rbac.authorization.k8s.io
