--- a/other-cel/restrict-controlplane-scheduling/.kyverno-test/resource.yaml
+++ b/other-cel/restrict-controlplane-scheduling/.kyverno-test/resource.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: myapp-pod-1
+  name: badpod01
   labels:
     app: myapp
 spec:
@@ -19,7 +19,7 @@ spec:
 apiVersion: v1
 kind: Pod
 metadata:
-  name: myapp-pod-2
+  name: badpod02
   labels:
     app: myapp
 spec:
@@ -32,3 +32,37 @@ spec:
   - image: nginx
     name: pod
   restartPolicy: Always
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: goodpod01
+  labels:
+    app: myapp
+spec:
+  tolerations:
+  - key: "foo-bar"
+    operator: "Exists"
+    effect: "NoSchedule"
+  containers:
+  - name: busybox
+    image: busybox:1.35
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: goodpod02
+  labels:
+    app: myapp
+spec:
+  tolerations:
+  - key: "foo-bar"
+    operator: "Exists"
+    effect: "NoSchedule"
+  - key: "node-role.kubernetes.io/foo-bar"
+    operator: "Equal"
+    value: "bar"
+    effect: "NoExecute"
+  containers:
+  - name: busybox
+    image: busybox:1.35
