convert restrict-controlplane-scheduling
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/restrict-controlplane-scheduling/restrict-controlplane-scheduling.yaml
+++ b/other-cel/restrict-controlplane-scheduling/restrict-controlplane-scheduling.yaml
@@ -3,10 +3,11 @@ kind: ClusterPolicy
 metadata:
   name: restrict-controlplane-scheduling
   annotations:
-    policies.kyverno.io/title: Restrict control plane scheduling
-    policies.kyverno.io/category: Sample
+    policies.kyverno.io/title: Restrict control plane scheduling in CEL expressions
+    policies.kyverno.io/category: Sample in CEL 
     policies.kyverno.io/subject: Pod
-    policies.kyverno.io/minversion: 1.6.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Scheduling non-system Pods to control plane nodes (which run kubelet) is often undesirable
       because it takes away resources from the control plane components and can represent
@@ -14,7 +15,7 @@ metadata:
       in a Pod spec which allows running on control plane nodes
       with the taint key `node-role.kubernetes.io/master`.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: restrict-controlplane-scheduling-master
@@ -24,20 +25,10 @@ spec:
           kinds:
           - Pod
     validate:
-      message: Pods may not use tolerations which schedule on control plane nodes.
-      pattern:
-        spec:
-          =(tolerations):
-            - key: "!node-role.kubernetes.io/master"
-  - name: restrict-controlplane-scheduling-control-plane
-    match:
-      any:
-      - resources:
-          kinds:
-          - Pod
-    validate:
-      message: Pods may not use tolerations which schedule on control plane nodes.
-      pattern:
-        spec:
-          =(tolerations):
-            - key: "!node-role.kubernetes.io/control-plane"
+      cel:
+        expressions:
+          - expression: >-
+              !has(object.spec.tolerations) || 
+              !object.spec.tolerations.exists(toleration, has(toleration.key) && toleration.key in ['node-role.kubernetes.io/master', 'node-role.kubernetes.io/control-plane'])
+            message: Pods may not use tolerations which schedule on control plane nodes.
+
