--- a/other-cel/restrict-deprecated-registry/restrict-deprecated-registry.yaml
+++ b/other-cel/restrict-deprecated-registry/restrict-deprecated-registry.yaml
@@ -3,10 +3,11 @@ kind: ClusterPolicy
 metadata:
   name: restrict-deprecated-registry
   annotations:
-    policies.kyverno.io/title: Restrict Deprecated Registry
-    policies.kyverno.io/category: Best Practices, EKS Best Practices
+    policies.kyverno.io/title: Restrict Deprecated Registry in CEL expressions
+    policies.kyverno.io/category: Best Practices, EKS Best Practices in CEL 
     policies.kyverno.io/severity: high
-    policies.kyverno.io/minversion: 1.9.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.27-1.28"
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/description: >-
       Legacy k8s.gcr.io container image registry will be frozen in early April 2023
@@ -26,12 +27,11 @@ spec:
           kinds:
           - Pod
     validate:
-        message: "The \"k8s.gcr.io\" image registry is deprecated. \"registry.k8s.io\" should now be used."
-        foreach:
-          - list: "request.object.spec.[initContainers, ephemeralContainers, containers][]"
-            deny:
-              conditions:
-                all:
-                  - key: "{{ element.image }}"
-                    operator: Equals
-                    value: "k8s.gcr.io/*"
+      cel:
+        variables:
+          - name: allContainers
+            expression: "(object.spec.containers + (has(object.spec.initContainers) ? object.spec.initContainers : []) + (has(object.spec.ephemeralContainers) ? object.spec.ephemeralContainers : []))"
+        expressions:
+          - expression: "variables.allContainers.all(container, !container.image.startsWith('k8s.gcr.io/'))"
+            message: "The \"k8s.gcr.io\" image registry is deprecated. \"registry.k8s.io\" should now be used."
+    
