--- a/other/copy-namespace-labels/.chainsaw-test/chainsaw-test.yaml
+++ b/other/copy-namespace-labels/.chainsaw-test/chainsaw-test.yaml
@@ -8,27 +8,15 @@ spec:
   - name: step-01
     try:
     - apply:
-        file: ns.yaml
-    - apply:
         file: ../copy-namespace-labels.yaml
     - assert:
         file: policy-ready.yaml
   - name: step-02
     try:
     - apply:
-        file: goodpod.yaml
-    - apply:
-        file: podcontroller-good.yaml
+        file: gooddeployment.yaml
     - apply:
         expect:
         - check:
             ($error != null): true
-        file: badpod.yaml
-    - apply:
-        expect:
-        - check:
-            ($error != null): true
-        file: podcontroller-bad.yaml
-    
-
-
+        file: baddeployment.yaml
