add edge case to chainsaw test for restrict-escalation-verbs-roles
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/restrict-escalation-verbs-roles/.chainsaw-test/cr-bad.yaml
+++ b/other-cel/restrict-escalation-verbs-roles/.chainsaw-test/cr-bad.yaml
@@ -42,3 +42,14 @@ rules:
 - apiGroups: ["batches", "rbac.authorization.k8s.io"]
   resources: ["clusterroles"]
   verbs: ["get", "watch", "list"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: badcr04
+rules:
+- apiGroups: ["*"]
+  resources: ["*"]
+  verbs: ["*"]
+
+  
