--- a/other-cel/restrict-escalation-verbs-roles/restrict-escalation-verbs-roles.yaml
+++ b/other-cel/restrict-escalation-verbs-roles/restrict-escalation-verbs-roles.yaml
@@ -3,19 +3,19 @@ kind: ClusterPolicy
 metadata:
   name: restrict-escalation-verbs-roles
   annotations:
-    policies.kyverno.io/title: Restrict Escalation Verbs in Roles
-    policies.kyverno.io/category: Security
+    policies.kyverno.io/title: Restrict Escalation Verbs in Roles in CEL expressions
+    policies.kyverno.io/category: Security in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Role, ClusterRole, RBAC
-    kyverno.io/kyverno-version: 1.6.2
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       The verbs `impersonate`, `bind`, and `escalate` may all potentially lead to
       privilege escalation and should be tightly controlled. This policy prevents
       use of these verbs in Role or ClusterRole resources.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
     - name: escalate
@@ -26,24 +26,19 @@ spec:
               - Role
               - ClusterRole
       validate:
-        message: "Use of verbs `escalate`, `bind`, and `impersonate` are forbidden."
-        foreach:
-        - list: "request.object.rules[]"
-          deny:
-            conditions:
-              all:
-              - key: "{{ element.apiGroups || '' }}"
-                operator: AnyIn
-                value:
-                - rbac.authorization.k8s.io
-              - key: "{{ element.resources || '' }}"
-                operator: AnyIn
-                value:
-                - clusterroles
-                - roles
-              - key: "{{ element.verbs }}"
-                operator: AnyIn
-                value:
-                - bind
-                - escalate
-                - impersonate
+        cel:
+          variables:
+            - name: apiGroups
+              expression: "['*', 'rbac.authorization.k8s.io']"
+            - name: resources
+              expression: "['*', 'clusterroles', 'roles']"
+            - name: verbs
+              expression: "['*', 'bind', 'escalate', 'impersonate']"
+          expressions:
+            - expression: >-
+                !object.rules.exists(rule,
+                rule.apiGroups.exists(apiGroup, apiGroup in variables.apiGroups) &&
+                rule.resources.exists(resource, resource in variables.resources) &&
+                rule.verbs.exists(verb, verb in variables.verbs))
+              message: "Use of verbs `escalate`, `bind`, and `impersonate` are forbidden."
+
