--- a/other-cel/restrict-ingress-defaultbackend/restrict-ingress-defaultbackend.yaml
+++ b/other-cel/restrict-ingress-defaultbackend/restrict-ingress-defaultbackend.yaml
@@ -3,12 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: restrict-ingress-defaultbackend
   annotations:
-    policies.kyverno.io/title: Restrict Ingress defaultBackend
-    policies.kyverno.io/category: Best Practices
+    policies.kyverno.io/title: Restrict Ingress defaultBackend in CEL expressions
+    policies.kyverno.io/category: Best Practices in CEL 
     policies.kyverno.io/severity: high
-    kyverno.io/kyverno-version: 1.6.2
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Ingress
     policies.kyverno.io/description: >-
       An Ingress with no rules sends all traffic to a single default backend. The defaultBackend
@@ -18,7 +18,7 @@ metadata:
       want users to use explicit hosts, they should not be able to overwrite the global default backend
       service. This policy prohibits the use of the defaultBackend field.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: restrict-ingress-defaultbackend
@@ -28,7 +28,9 @@ spec:
           kinds:
           - Ingress
     validate:
+      cel:
+        expressions:
+          - expression: "!has(object.spec.defaultBackend)"
       message: Setting the defaultBackend field is prohibited.
-      pattern:
-        spec:
-          X(defaultBackend): "null"
+
+      
