add corresponding kyverno tests in other folder
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other/require-deployments-have-multiple-replicas/.kyverno-test/kyverno-test.yaml
+++ b/other/require-deployments-have-multiple-replicas/.kyverno-test/kyverno-test.yaml
@@ -10,6 +10,13 @@ results:
 - kind: Deployment
   policy: deployment-has-multiple-replicas
   resources:
-  - mydeploy
+  - mydeploygood
   result: pass
   rule: deployment-has-multiple-replicas
+- kind: Deployment
+  policy: deployment-has-multiple-replicas
+  resources:
+  - mydeploybad
+  result: fail
+  rule: deployment-has-multiple-replicas
+
