--- a/other-cel/restrict-ingress-wildcard/.chainsaw-test/ingress-bad.yaml
+++ b/other-cel/restrict-ingress-wildcard/.chainsaw-test/ingress-bad.yaml
@@ -31,7 +31,7 @@ spec:
             name: test
             port:
               number: 80
-  - host: "foo.*.com"
+  - host: "*.example.com"
     https:
       paths:
       - path: /testpath
