--- a/other-cel/restrict-loadbalancer/restrict-loadbalancer.yaml
+++ b/other-cel/restrict-loadbalancer/restrict-loadbalancer.yaml
@@ -3,11 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: no-loadbalancer-service
   annotations:
-    policies.kyverno.io/title: Disallow Service Type LoadBalancer
-    policies.kyverno.io/category: Sample
+    policies.kyverno.io/title: Disallow Service Type LoadBalancer in CEL expressions
+    policies.kyverno.io/category: Sample in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Service
-    policies.kyverno.io/minversion: 1.6.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       Especially in cloud provider environments, a Service having type LoadBalancer will cause the
       provider to respond by creating a load balancer somewhere in the customer account. This adds
@@ -15,7 +16,7 @@ metadata:
       overrun established budgets and security practices set by the organization. This policy restricts
       use of the Service type LoadBalancer.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
   - name: no-LoadBalancer
@@ -25,7 +26,8 @@ spec:
           kinds:
           - Service
     validate:
-      message: "Service of type LoadBalancer is not allowed."
-      pattern:
-        spec:
-          type: "!LoadBalancer"
+      cel:
+        expressions:
+          - expression: "object.spec.type != 'LoadBalancer'"
+            message: "Service of type LoadBalancer is not allowed."
+
