convert restrict-secret-role-verbs
Signed-off-by: Chandan-DK <chandandk468@gmail.com>

--- a/other-cel/restrict-secret-role-verbs/restrict-secret-role-verbs.yaml
+++ b/other-cel/restrict-secret-role-verbs/restrict-secret-role-verbs.yaml
@@ -3,13 +3,13 @@ kind: ClusterPolicy
 metadata:
   name: restrict-secret-role-verbs
   annotations:
-    policies.kyverno.io/title: Restrict Secret Verbs in Roles
-    policies.kyverno.io/category: Security
+    policies.kyverno.io/title: Restrict Secret Verbs in Roles in CEL expressions
+    policies.kyverno.io/category: Security in CEL 
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Role, ClusterRole, RBAC
-    kyverno.io/kyverno-version: 1.6.2
-    policies.kyverno.io/minversion: 1.6.0
-    kyverno.io/kubernetes-version: "1.23"
+    kyverno.io/kyverno-version: 1.11.0
+    policies.kyverno.io/minversion: 1.11.0
+    kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
       The verbs `get`, `list`, and `watch` in a Role or ClusterRole, when paired with the Secrets resource, effectively
       allows Secrets to be read which may expose sensitive information. This policy prevents
@@ -18,7 +18,7 @@ metadata:
       also prevents use of the wildcard ('*') in the verbs list either when explicitly naming Secrets
       or when also using a wildcard in the base API group.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: Audit
   background: true
   rules:
     - name: secret-verbs
@@ -29,10 +29,13 @@ spec:
               - Role
               - ClusterRole
       validate:
-        message: "Requesting verbs `get`, `list`, or `watch` on Secrets is forbidden."
-        deny:
-          conditions:
-            any:
-            - key: ["get","list","watch"]
-              operator: AnyIn
-              value: "{{ request.object.rules[?resources.contains(@,'secrets')].verbs[] }}"
+        cel:
+          variables:
+            - name: forbiddenVerbs
+              expression: "['get','list','watch']"
+          expressions:
+            - expression: >-
+                !object.rules.exists(rule, 
+                'secrets' in rule.resources && rule.verbs.exists(verb, verb in variables.forbiddenVerbs))
+              message: "Requesting verbs `get`, `list`, or `watch` on Secrets is forbidden."
+
